--- a/css/jCookie.css
+++ b/css/jCookie.css
@@ -19,11 +19,11 @@
 }
 
 a:link, a:visited, a:active{
-	color: #FFF;
+	color: #FFF;	text-decoration: underline;
 }
 
 a:hover{
-	color: #CCC;
+	color: #CCC;	text-decoration: underline;
 }
 
 .cookie-close-button:hover{
